src/parser.output
   0  $accept : %entry% $end

   1  tokenize : seq EOL
   2           | EOL

   3  seq : token
   4      | token seq

   5  token : COLON
   6        | TAB
   7        | SPACE
   8        | ARROW
   9        | RETURN
  10        | NOT
  11        | IF
  12        | ELSE
  13        | FOR
  14        | WHILE
  15        | DEF
  16        | COMMA
  17        | NEQ
  18        | LT
  19        | GT
  20        | LEQ
  21        | GEQ
  22        | AND
  23        | PASS
  24        | CONTINUE
  25        | BREAK
  26        | OR
  27        | IN
  28        | TRUE
  29        | FALSE
  30        | IS
  31        | PLUS
  32        | MINUS
  33        | TIMES
  34        | DIVIDE
  35        | EXP
  36        | PLUSEQ
  37        | MINUSEQ
  38        | TIMESEQ
  39        | DIVIDEEQ
  40        | EXPEQ
  41        | LPAREN
  42        | RPAREN
  43        | LBRACK
  44        | RBRACK
  45        | LBRACE
  46        | RBRACE
  47        | EQ
  48        | ASN
  49        | SEP
  50        | BOOL
  51        | INT
  52        | FLOAT
  53        | FUNC
  54        | ARR
  55        | STRING
  56        | INDENT
  57        | DEDENT
  58        | VARIABLE
  59        | FLOAT_LITERAL
  60        | INT_LITERAL
  61        | BOOL_LITERAL
  62        | STRING_LITERAL
  63        | EOF
  64        | CLASS
  65        | NONE
  66        | DOT
  67        | TYPE
  68        | PRINT
  69        | IMPORT
  70        | RANGE
  71        | LAMBDA
  72        | PIPE

  73  program : stmt_list EOF

  74  stmt_list :
  75            | stmt_list stmt

  76  stmt : expr SEP
  77       | stmt SEP
  78       | IMPORT VARIABLE SEP
  79       | CLASS VARIABLE COLON SEP stmt_block
  80       | DEF VARIABLE LPAREN formals_opt RPAREN COLON SEP stmt_block
  81       | DEF VARIABLE LPAREN formals_opt RPAREN ARROW typ COLON SEP stmt_block
  82       | RETURN expr SEP
  83       | IF expr COLON SEP stmt_block
  84       | IF expr COLON SEP stmt_block ELSE COLON SEP stmt_block
  85       | FOR bind_opt IN expr COLON SEP stmt_block
  86       | FOR bind_opt IN RANGE LPAREN expr RPAREN COLON SEP stmt_block
  87       | WHILE expr COLON SEP stmt_block
  88       | formal_asn_list ASN expr
  89       | lvalue PLUSEQ expr
  90       | lvalue MINUSEQ expr
  91       | lvalue TIMESEQ expr
  92       | lvalue DIVIDEEQ expr
  93       | lvalue EXPEQ expr
  94       | TYPE LPAREN expr RPAREN
  95       | PRINT LPAREN expr RPAREN
  96       | BREAK SEP
  97       | CONTINUE SEP
  98       | PASS
  99       | NOP

 100  formal_asn_list : lvalue
 101                  | formal_asn_list ASN lvalue

 102  lvalue : bind_opt
 103         | list_access

 104  bind_opt : VARIABLE
 105           | VARIABLE COLON typ

 106  list_access : exp LBRACK expr RBRACK
 107              | exp LBRACK expr COLON expr RBRACK

 108  stmt_block : INDENT stmt_list DEDENT

 109  formals_opt :
 110              | formal_list

 111  formal_list : bind_opt
 112              | formal_list COMMA bind_opt

 113  actuals_opt :
 114              | actuals_list

 115  actuals_list : expr
 116               | actuals_list COMMA expr

 117  typ : FLOAT
 118      | INT
 119      | BOOL
 120      | STRING
 121      | ARR
 122      | FUNC

 123  var_list : VARIABLE
 124           | var_list VARIABLE

 125  expr : exp
 126       | expr exp

 127  exp : LPAREN expr RPAREN
 128      | VARIABLE
 129      | list_access
 130      | LAMBDA var_list COLON exp

 131  %entry% : '\001' tokenize
 132          | '\002' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . tokenize  (131)

	ASN  shift 4
	EQ  shift 5
	NEQ  shift 6
	LT  shift 7
	GT  shift 8
	LEQ  shift 9
	GEQ  shift 10
	PLUS  shift 11
	MINUS  shift 12
	TIMES  shift 13
	DIVIDE  shift 14
	PLUSEQ  shift 15
	MINUSEQ  shift 16
	TIMESEQ  shift 17
	DIVIDEEQ  shift 18
	EXPEQ  shift 19
	EXP  shift 20
	NOT  shift 21
	SEP  shift 22
	AND  shift 23
	OR  shift 24
	ARROW  shift 25
	TYPE  shift 26
	PRINT  shift 27
	FUNC  shift 28
	CONTINUE  shift 29
	PASS  shift 30
	BREAK  shift 31
	LAMBDA  shift 32
	PIPE  shift 33
	TAB  shift 34
	SPACE  shift 35
	COLON  shift 36
	EOF  shift 37
	EOL  shift 38
	IF  shift 39
	ELSE  shift 40
	FOR  shift 41
	WHILE  shift 42
	COMMA  shift 43
	DEF  shift 44
	IN  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IS  shift 48
	RETURN  shift 49
	NONE  shift 50
	DOT  shift 51
	BOOL  shift 52
	INT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	ARR  shift 56
	CLASS  shift 57
	IMPORT  shift 58
	RANGE  shift 59
	INDENT  shift 60
	DEDENT  shift 61
	LPAREN  shift 62
	RPAREN  shift 63
	LBRACK  shift 64
	RBRACK  shift 65
	LBRACE  shift 66
	RBRACE  shift 67
	VARIABLE  shift 68
	FLOAT_LITERAL  shift 69
	STRING_LITERAL  shift 70
	INT_LITERAL  shift 71
	BOOL_LITERAL  shift 72
	.  error

	tokenize  goto 73
	seq  goto 74
	token  goto 75


state 2
	%entry% : '\002' . program  (132)
	stmt_list : .  (74)

	.  reduce 74

	program  goto 76
	stmt_list  goto 77


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	token : ASN .  (48)

	.  reduce 48


state 5
	token : EQ .  (47)

	.  reduce 47


state 6
	token : NEQ .  (17)

	.  reduce 17


state 7
	token : LT .  (18)

	.  reduce 18


state 8
	token : GT .  (19)

	.  reduce 19


state 9
	token : LEQ .  (20)

	.  reduce 20


state 10
	token : GEQ .  (21)

	.  reduce 21


state 11
	token : PLUS .  (31)

	.  reduce 31


state 12
	token : MINUS .  (32)

	.  reduce 32


state 13
	token : TIMES .  (33)

	.  reduce 33


state 14
	token : DIVIDE .  (34)

	.  reduce 34


state 15
	token : PLUSEQ .  (36)

	.  reduce 36


state 16
	token : MINUSEQ .  (37)

	.  reduce 37


state 17
	token : TIMESEQ .  (38)

	.  reduce 38


state 18
	token : DIVIDEEQ .  (39)

	.  reduce 39


state 19
	token : EXPEQ .  (40)

	.  reduce 40


state 20
	token : EXP .  (35)

	.  reduce 35


state 21
	token : NOT .  (10)

	.  reduce 10


state 22
	token : SEP .  (49)

	.  reduce 49


state 23
	token : AND .  (22)

	.  reduce 22


state 24
	token : OR .  (26)

	.  reduce 26


state 25
	token : ARROW .  (8)

	.  reduce 8


state 26
	token : TYPE .  (67)

	.  reduce 67


state 27
	token : PRINT .  (68)

	.  reduce 68


state 28
	token : FUNC .  (53)

	.  reduce 53


state 29
	token : CONTINUE .  (24)

	.  reduce 24


state 30
	token : PASS .  (23)

	.  reduce 23


state 31
	token : BREAK .  (25)

	.  reduce 25


state 32
	token : LAMBDA .  (71)

	.  reduce 71


state 33
	token : PIPE .  (72)

	.  reduce 72


state 34
	token : TAB .  (6)

	.  reduce 6


state 35
	token : SPACE .  (7)

	.  reduce 7


state 36
	token : COLON .  (5)

	.  reduce 5


state 37
	token : EOF .  (63)

	.  reduce 63


state 38
	tokenize : EOL .  (2)

	.  reduce 2


state 39
	token : IF .  (11)

	.  reduce 11


state 40
	token : ELSE .  (12)

	.  reduce 12


state 41
	token : FOR .  (13)

	.  reduce 13


state 42
	token : WHILE .  (14)

	.  reduce 14


state 43
	token : COMMA .  (16)

	.  reduce 16


state 44
	token : DEF .  (15)

	.  reduce 15


state 45
	token : IN .  (27)

	.  reduce 27


state 46
	token : TRUE .  (28)

	.  reduce 28


state 47
	token : FALSE .  (29)

	.  reduce 29


state 48
	token : IS .  (30)

	.  reduce 30


state 49
	token : RETURN .  (9)

	.  reduce 9


state 50
	token : NONE .  (65)

	.  reduce 65


state 51
	token : DOT .  (66)

	.  reduce 66


state 52
	token : BOOL .  (50)

	.  reduce 50


state 53
	token : INT .  (51)

	.  reduce 51


state 54
	token : FLOAT .  (52)

	.  reduce 52


state 55
	token : STRING .  (55)

	.  reduce 55


state 56
	token : ARR .  (54)

	.  reduce 54


state 57
	token : CLASS .  (64)

	.  reduce 64


state 58
	token : IMPORT .  (69)

	.  reduce 69


state 59
	token : RANGE .  (70)

	.  reduce 70


state 60
	token : INDENT .  (56)

	.  reduce 56


state 61
	token : DEDENT .  (57)

	.  reduce 57


state 62
	token : LPAREN .  (41)

	.  reduce 41


state 63
	token : RPAREN .  (42)

	.  reduce 42


state 64
	token : LBRACK .  (43)

	.  reduce 43


state 65
	token : RBRACK .  (44)

	.  reduce 44


state 66
	token : LBRACE .  (45)

	.  reduce 45


state 67
	token : RBRACE .  (46)

	.  reduce 46


state 68
	token : VARIABLE .  (58)

	.  reduce 58


state 69
	token : FLOAT_LITERAL .  (59)

	.  reduce 59


state 70
	token : STRING_LITERAL .  (62)

	.  reduce 62


state 71
	token : INT_LITERAL .  (60)

	.  reduce 60


state 72
	token : BOOL_LITERAL .  (61)

	.  reduce 61


state 73
	%entry% : '\001' tokenize .  (131)

	.  reduce 131


state 74
	tokenize : seq . EOL  (1)

	EOL  shift 78
	.  error


state 75
	seq : token .  (3)
	seq : token . seq  (4)

	ASN  shift 4
	EQ  shift 5
	NEQ  shift 6
	LT  shift 7
	GT  shift 8
	LEQ  shift 9
	GEQ  shift 10
	PLUS  shift 11
	MINUS  shift 12
	TIMES  shift 13
	DIVIDE  shift 14
	PLUSEQ  shift 15
	MINUSEQ  shift 16
	TIMESEQ  shift 17
	DIVIDEEQ  shift 18
	EXPEQ  shift 19
	EXP  shift 20
	NOT  shift 21
	SEP  shift 22
	AND  shift 23
	OR  shift 24
	ARROW  shift 25
	TYPE  shift 26
	PRINT  shift 27
	FUNC  shift 28
	CONTINUE  shift 29
	PASS  shift 30
	BREAK  shift 31
	LAMBDA  shift 32
	PIPE  shift 33
	TAB  shift 34
	SPACE  shift 35
	COLON  shift 36
	EOF  shift 37
	IF  shift 39
	ELSE  shift 40
	FOR  shift 41
	WHILE  shift 42
	COMMA  shift 43
	DEF  shift 44
	IN  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IS  shift 48
	RETURN  shift 49
	NONE  shift 50
	DOT  shift 51
	BOOL  shift 52
	INT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	ARR  shift 56
	CLASS  shift 57
	IMPORT  shift 58
	RANGE  shift 59
	INDENT  shift 60
	DEDENT  shift 61
	LPAREN  shift 62
	RPAREN  shift 63
	LBRACK  shift 64
	RBRACK  shift 65
	LBRACE  shift 66
	RBRACE  shift 67
	VARIABLE  shift 68
	FLOAT_LITERAL  shift 69
	STRING_LITERAL  shift 70
	INT_LITERAL  shift 71
	BOOL_LITERAL  shift 72
	EOL  reduce 3

	seq  goto 79
	token  goto 75


state 76
	%entry% : '\002' program .  (132)

	.  reduce 132


state 77
	program : stmt_list . EOF  (73)
	stmt_list : stmt_list . stmt  (75)

	NOP  shift 80
	TYPE  shift 81
	PRINT  shift 82
	CONTINUE  shift 83
	PASS  shift 84
	BREAK  shift 85
	LAMBDA  shift 86
	EOF  shift 87
	IF  shift 88
	FOR  shift 89
	WHILE  shift 90
	DEF  shift 91
	RETURN  shift 92
	CLASS  shift 93
	IMPORT  shift 94
	LPAREN  shift 95
	VARIABLE  shift 96
	.  error

	stmt  goto 97
	expr  goto 98
	bind_opt  goto 99
	formal_asn_list  goto 100
	lvalue  goto 101
	list_access  goto 102
	exp  goto 103


state 78
	tokenize : seq EOL .  (1)

	.  reduce 1


state 79
	seq : token seq .  (4)

	.  reduce 4


state 80
	stmt : NOP .  (99)

	.  reduce 99


state 81
	stmt : TYPE . LPAREN expr RPAREN  (94)

	LPAREN  shift 104
	.  error


state 82
	stmt : PRINT . LPAREN expr RPAREN  (95)

	LPAREN  shift 105
	.  error


state 83
	stmt : CONTINUE . SEP  (97)

	SEP  shift 106
	.  error


state 84
	stmt : PASS .  (98)

	.  reduce 98


state 85
	stmt : BREAK . SEP  (96)

	SEP  shift 107
	.  error


state 86
	exp : LAMBDA . var_list COLON exp  (130)

	VARIABLE  shift 108
	.  error

	var_list  goto 109


state 87
	program : stmt_list EOF .  (73)

	.  reduce 73


state 88
	stmt : IF . expr COLON SEP stmt_block  (83)
	stmt : IF . expr COLON SEP stmt_block ELSE COLON SEP stmt_block  (84)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 111
	list_access  goto 112
	exp  goto 103


state 89
	stmt : FOR . bind_opt IN expr COLON SEP stmt_block  (85)
	stmt : FOR . bind_opt IN RANGE LPAREN expr RPAREN COLON SEP stmt_block  (86)

	VARIABLE  shift 113
	.  error

	bind_opt  goto 114


state 90
	stmt : WHILE . expr COLON SEP stmt_block  (87)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 115
	list_access  goto 112
	exp  goto 103


state 91
	stmt : DEF . VARIABLE LPAREN formals_opt RPAREN COLON SEP stmt_block  (80)
	stmt : DEF . VARIABLE LPAREN formals_opt RPAREN ARROW typ COLON SEP stmt_block  (81)

	VARIABLE  shift 116
	.  error


state 92
	stmt : RETURN . expr SEP  (82)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 117
	list_access  goto 112
	exp  goto 103


state 93
	stmt : CLASS . VARIABLE COLON SEP stmt_block  (79)

	VARIABLE  shift 118
	.  error


state 94
	stmt : IMPORT . VARIABLE SEP  (78)

	VARIABLE  shift 119
	.  error


state 95
	exp : LPAREN . expr RPAREN  (127)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 120
	list_access  goto 112
	exp  goto 103


state 96
	bind_opt : VARIABLE .  (104)
	bind_opt : VARIABLE . COLON typ  (105)
	exp : VARIABLE .  (128)

	COLON  shift 121
	ASN  reduce 104
	PLUSEQ  reduce 104
	MINUSEQ  reduce 104
	TIMESEQ  reduce 104
	DIVIDEEQ  reduce 104
	EXPEQ  reduce 104
	SEP  reduce 128
	NOP  reduce 128
	TYPE  reduce 128
	PRINT  reduce 128
	CONTINUE  reduce 128
	PASS  reduce 128
	BREAK  reduce 128
	LAMBDA  reduce 128
	EOF  reduce 128
	IF  reduce 128
	FOR  reduce 128
	WHILE  reduce 128
	DEF  reduce 128
	RETURN  reduce 128
	CLASS  reduce 128
	IMPORT  reduce 128
	DEDENT  reduce 128
	LPAREN  reduce 128
	LBRACK  reduce 128
	VARIABLE  reduce 128


state 97
	stmt_list : stmt_list stmt .  (75)
	stmt : stmt . SEP  (77)

	SEP  shift 122
	NOP  reduce 75
	TYPE  reduce 75
	PRINT  reduce 75
	CONTINUE  reduce 75
	PASS  reduce 75
	BREAK  reduce 75
	LAMBDA  reduce 75
	EOF  reduce 75
	IF  reduce 75
	FOR  reduce 75
	WHILE  reduce 75
	DEF  reduce 75
	RETURN  reduce 75
	CLASS  reduce 75
	IMPORT  reduce 75
	DEDENT  reduce 75
	LPAREN  reduce 75
	VARIABLE  reduce 75


state 98
	stmt : expr . SEP  (76)
	expr : expr . exp  (126)

	SEP  shift 123
	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	list_access  goto 112
	exp  goto 124


state 99
	lvalue : bind_opt .  (102)

	.  reduce 102


state 100
	stmt : formal_asn_list . ASN expr  (88)
	formal_asn_list : formal_asn_list . ASN lvalue  (101)

	ASN  shift 125
	.  error


state 101
	stmt : lvalue . PLUSEQ expr  (89)
	stmt : lvalue . MINUSEQ expr  (90)
	stmt : lvalue . TIMESEQ expr  (91)
	stmt : lvalue . DIVIDEEQ expr  (92)
	stmt : lvalue . EXPEQ expr  (93)
	formal_asn_list : lvalue .  (100)

	PLUSEQ  shift 126
	MINUSEQ  shift 127
	TIMESEQ  shift 128
	DIVIDEEQ  shift 129
	EXPEQ  shift 130
	ASN  reduce 100


state 102
	lvalue : list_access .  (103)
	exp : list_access .  (129)

	ASN  reduce 103
	PLUSEQ  reduce 103
	MINUSEQ  reduce 103
	TIMESEQ  reduce 103
	DIVIDEEQ  reduce 103
	EXPEQ  reduce 103
	SEP  reduce 129
	NOP  reduce 129
	TYPE  reduce 129
	PRINT  reduce 129
	CONTINUE  reduce 129
	PASS  reduce 129
	BREAK  reduce 129
	LAMBDA  reduce 129
	EOF  reduce 129
	IF  reduce 129
	FOR  reduce 129
	WHILE  reduce 129
	DEF  reduce 129
	RETURN  reduce 129
	CLASS  reduce 129
	IMPORT  reduce 129
	DEDENT  reduce 129
	LPAREN  reduce 129
	LBRACK  reduce 129
	VARIABLE  reduce 129


state 103
	list_access : exp . LBRACK expr RBRACK  (106)
	list_access : exp . LBRACK expr COLON expr RBRACK  (107)
	expr : exp .  (125)

	LBRACK  shift 131
	SEP  reduce 125
	NOP  reduce 125
	TYPE  reduce 125
	PRINT  reduce 125
	CONTINUE  reduce 125
	PASS  reduce 125
	BREAK  reduce 125
	LAMBDA  reduce 125
	COLON  reduce 125
	EOF  reduce 125
	IF  reduce 125
	FOR  reduce 125
	WHILE  reduce 125
	DEF  reduce 125
	RETURN  reduce 125
	CLASS  reduce 125
	IMPORT  reduce 125
	DEDENT  reduce 125
	LPAREN  reduce 125
	RPAREN  reduce 125
	RBRACK  reduce 125
	VARIABLE  reduce 125


state 104
	stmt : TYPE LPAREN . expr RPAREN  (94)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 132
	list_access  goto 112
	exp  goto 103


state 105
	stmt : PRINT LPAREN . expr RPAREN  (95)

	LAMBDA  shift 86
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	expr  goto 133
	list_access  goto 112
	exp  goto 103


state 106
	stmt : CONTINUE SEP .  (97)

	.  reduce 97


state 107
	stmt : BREAK SEP .  (96)

	.  reduce 96


state 108
	var_list : VARIABLE .  (123)

	.  reduce 123


state 109
	var_list : var_list . VARIABLE  (124)
	exp : LAMBDA var_list . COLON exp  (130)

	COLON  shift 134
	VARIABLE  shift 135
	.  error


state 110
	exp : VARIABLE .  (128)

	.  reduce 128


state 111
	stmt : IF expr . COLON SEP stmt_block  (83)
	stmt : IF expr . COLON SEP stmt_block ELSE COLON SEP stmt_block  (84)
	expr : expr . exp  (126)

	LAMBDA  shift 86
	COLON  shift 136
	LPAREN  shift 95
	VARIABLE  shift 110
	.  error

	list_access  goto 112
	exp  goto 124


state 112
	exp : list_access .  (129)

	.  reduce 129

